[package]
name = "tipsy"
version = "0.1.0"
edition = "2024"

[dependencies]
swc_atoms = "^5.0.0"
swc_common = "^10.0.0"
swc_ecma_ast = "^10.0.0"
swc_ecma_compat_es2015 = "^15.0.0"
swc_ecma_minifier = "^19.0.0"
swc_ecma_transforms_base = "^14.0.0"
swc_ecma_utils = "^14.0.0"
swc_ecma_visit = "^10.0.0"
swc_bundler = "^18.0.0"
swc_ecma_loader = "^10.0.0"
swc_ecma_parser = "^13.0.0"